# time-cli

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: cli.ts  db.ts  index.ts  slotService.ts  tableRenderer.ts  types.ts  utils.ts
src/commands/: add.ts  bank.ts  delete.ts  edit.ts  eta.ts  export.ts  hello.ts  import.ts  joke.ts  list.ts  log.ts  report.ts  reset.ts  start.ts  status.ts  stop.ts  study.ts  summary.ts
src/lib/: db.ts  utils.ts
src/time_cli_pkg/: cli.py  config.py  core.py  database.py  reporting.py  utils.py
src/utils/: constants.ts  db.ts  errorHandler.ts  logger.ts
